--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -353,7 +353,6 @@ bg=img64;
 }
 imagePrev.src = bg;
 var img = this;
-// alert(this.naturalWidth + 'x' + this.naturalHeight);
 if(bg){
 var bgsize=this.naturalWidth>1200?100:100*this.naturalWidth/1200;
 bgsize=bgsize+'% auto';
@@ -424,9 +423,11 @@ this.close();
 function convertVideo(uploadResult){
 var uploadResult=JSON.parse(uploadResult.response);
 
+console.log('Dentro de convert: '+uploadResult.file);
+alert('ads');
 if(uploadResult.file){
 $.ajax({
-url:SERVERS.video+'/?convert',
+url:SERVERS.video+'/?convert&debug',
 dataType:'json',
 type:'post',
 data: {code:$.local('code'),file:uploadResult.file},
@@ -464,9 +465,11 @@ $bgCheck[0].dataset.template=convertResult.captures[0];
 $bgCheck[0].dataset.url=SERVERS.video+'/videos/'+convertResult.captures[0];
 $bgCheck.attr('src',SERVERS.video+'/videos/'+convertResult.captures[0]);
 },
-error: function(xhr, status, error) {
-var err = eval("(" + xhr.responseText + ")");
-alert(err.Message);
+fail: function(xhr, status, error) {
+
+console.log('error: '+status);
+$('#LoadingVideo').hide();
+
 }
 });
 }
@@ -491,39 +494,34 @@ id:'#LoadingVideo',
 content :contentLoading,
 buttons:[]
 });
-
 ft.upload(fileURL,
 encodeURI(SERVERS.video+"/upload.php"),
 convertVideo,
 function(error){
-alert('Error uploading file, Error Code:: ' + error.code + ', Source: ' + error.source +', '+ error.target);
+console.log('Error uploading file, Error Code:: ' + error.code + ', Source: ' + error.source +', '+ error.target);
+$('#LoadingVideo').hide();
 },
 options
 );
 
 }
-document.addEventListener('deviceready',function(){
-//alert('Device ready no');
-var cam=Camera,
-photoConfig={
-targetWidth:1200,
-quality:60,
-destinationType:cam.DestinationType.DATA_URL,
-//allowEdit:true,
-correctOrientation:true
-},
-onPhotoSuccess=function(data){
 
-$('#shootType').hide();
-
-if(!data.match(/^https?:\/\//i)){//no url = base64
-data='data:image/jpg;base64,'+data;
-$bgCheck[0].dataset.img64=data;
-img64=data;
-$bgCheck.attr('src',data);
+function removefile(file){
+fileSystem.root.getFile(file, {create: false, exclusive: false}, gotRemoveFileEntry, fail);
 }
 
-if(data.match(/(\.|\/)(mp4|m4v|mov|ogv|ogg|3gp|avi|mkv|flv|mpe?g|vob)$/i)){// es video
+function gotRemoveFileEntry(fileEntry){
+console.log(fileEntry);
+fileEntry.remove(success, fail);
+}
+
+function success(entry) {
+console.log("Removal succeeded");
+}
+
+function fail(error) {
+console.log("Error removing file: " + error.code);
+}
 
 var extToMimes = {
 'mp4':'video/mp4',
@@ -547,8 +545,59 @@ return extToMimes[ext];
 return false;
 
 }
+function videoTranscodeSuccess(result) {
 
-uploadFile({fullPath:data,name:data.substr( (data.lastIndexOf('/') +1)),type:getMimeByExt(data)});
+if($.isArray(result)) result=result.fullPath;
+
+console.log('videoTranscodeSuccess, result: ' + result);
+uploadFile({fullPath:result,name:result.substr( (result.lastIndexOf('/') +1)),type:getMimeByExt(result)});
+
+}
+
+function videoTranscodeError(err) {
+console.log('videoTranscodeError, err: ' + err);
+}
+
+
+document.addEventListener('deviceready',function(){
+var cam=Camera,
+photoConfig={
+targetWidth:1200,
+targetHeight: 554,
+quality:90,
+destinationType:cam.DestinationType.DATA_URL,
+//allowEdit:true,
+correctOrientation:true
+},
+onPhotoSuccess=function(data){
+
+$('#shootType').hide();
+
+if(!data.match(/^https?:\/\//i)){//no url = base64
+data='data:image/jpg;base64,'+data;
+$bgCheck[0].dataset.img64=data;
+img64=data;
+$bgCheck.attr('src',data);
+}
+
+if(data.match(/(\.|\/)(mp4|m4v|mov|ogv|ogg|3gp|avi|mkv|flv|mpe?g|vob)$/i)){// es video
+
+data=data.replace('data:image/jpg;base64,','');
+
+name_=data.substr( (data.lastIndexOf('/') +1));
+var dataOut='';
+VideoEditor.transcodeVideo(
+videoTranscodeSuccess,
+videoTranscodeError,
+{
+fileUri: data,
+outputFileName: Math.random()+'_'+name_,
+quality: VideoEditorOptions.Quality.HIGH_QUALITY,
+outputFileType: VideoEditorOptions.OutputFileType.MPEG4,
+optimizeForNetworkUse: VideoEditorOptions.OptimizeForNetworkUse.YES,
+duration: 60
+}
+);
 }
 },
 onPhotoFail=function(message){
@@ -559,7 +608,7 @@ var photoData=$.extend({},photoConfig);
 switch(type){
 
 case 'lib':
-photoData.mediaType=cam.MediaType.PICTURE;
+photoData.mediaType=cam.MediaType.ALLMEDIA;
 photoData.sourceType=cam.PictureSourceType.PHOTOLIBRARY;
 break;
 
@@ -591,11 +640,24 @@ var cam=Camera,
 captureSuccess=function(mediaFiles){
 var i,len;
 for (i = 0, len = mediaFiles.length; i < len; i += 1) {
-uploadFile(mediaFiles[i]);
+
+name_=mediaFiles[i].fullPath.substr( (mediaFiles[i].fullPath.lastIndexOf('/') +1));
+VideoEditor.transcodeVideo(
+videoTranscodeSuccess,
+videoTranscodeError,
+{
+fileUri: mediaFiles[i].fullPath,
+outputFileName: Math.random()+'_'+name_,
+quality: VideoEditorOptions.Quality.HIGH_QUALITY,
+outputFileType: VideoEditorOptions.OutputFileType.MPEG4,
+optimizeForNetworkUse: VideoEditorOptions.OptimizeForNetworkUse.YES,
+duration: 60
+}
+);
 }
 },
 captureError=function(error){
-navigator.notification.alert('Error code: '+error.code,null,'Capture Error');
+console.log('Error code: '+error.code,null,'Capture Error');
 };
 
 navigator.device.capture.captureVideo(captureSuccess,captureError,{limit:1,duration: 60});
@@ -647,7 +709,6 @@ bgMatrix[4]=Math.floor(bgMatrix[4]*realWidth/scaledWidth);
 bgMatrix[5]=Math.floor(bgMatrix[5]*realWidth/scaledWidth);
 console.log('bgmatrix',bgMatrix);
 }
-//alert(emails.join());
 myAjax({
 type:'POST',
 url:DOMINIO+'controls/tags/newTag.json.php',
