debug por pasos

--- a/local/xdk/login.html
+++ b/local/xdk/login.html
@@ -78,6 +78,7 @@ right: 10px;
 <div class="_tr">
 <input type="submit" id="btn-login" class="btn-orange" data-role="button" data-inline="true" data-theme="f" data-icon="arrow-r" data-iconpos="right" />
 <input type="hidden" name="gcaptcha" id="gcaptcha" value="false" />
+<input type="hidden" name="version" id="version" value="2" />
 <!-- <a id="btn-login2" class="btn-orange" data-role="button" data-inline="true" data-theme="f" data-icon="arrow-r" data-iconpos="right" href="#" onClick="$('#frmLogin').submit()"></a> -->
 </div>
 </div>
@@ -126,6 +127,7 @@ login:$('#txtLogin').val(),
 pwd:$('#txtPass').val(),
 iscaptcha:$('#gcaptcha').val(),
 recaptcha:$('#g-recaptcha-response').val(),
+version:$('#version').val(),
 lng:lang['actual']
 };
 if(CORDOVA) data.keep=true;
@@ -149,7 +151,7 @@ myDialog('#log-msg',lang['MSG_PAYPAL_HELP']+'<br><br><strong style="font-size: 1
 document.getElementById('g-recaptcha').style.display = ((data['iscaptcha'])?"block":"none");
 $('#gcaptcha').val( ((data['iscaptcha'])?true:false) );
 
-myDialog('#log-msg',data['error']&&lang(data['error'])||data['msg']);
+myDialog('#log-msg',data['msg']);
 
 if (data['iscaptcha']) grecaptcha.reset();
 }
